[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omop_server"
version = "0.1.0"
description = "This package initializes the tables in OMOP CDM as objects that can be called upon and used to perform the ETL process"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Siddharth Rajesh", email = "siddharth.rajesh03@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "absl-py==2.2.2",
    "asttokens",
    "astunparse==1.6.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama",
    "comm",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy",
    "decorator",
    "delta==0.4.2",
    "delta-spark==3.3.1",
    "dotenv==0.9.9",
    "exceptiongroup",
    "executing",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.57.0",
    "fsspec==2025.5.1",
    "fuzzywuzzy==0.18.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "greenlet==3.2.1",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "huggingface-hub==0.33.2",
    "idna==3.10",
    "importlib-metadata",
    "ipykernel",
    "ipython",
    "ipython-pygments-lexers",
    "jedi",
    "Jinja2==3.1.6",
    "joblib==1.5.0",
    "jupyter-client",
    "jupyter-core",
    "keras==3.9.2",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "Markdown==3.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "mpmath==1.3.0",
    "mssql-python==0.5.0",
    "namex==0.0.9",
    "nest-asyncio",
    "networkx==3.5",
    "numpy==2.1.3",
    "opt-einsum==3.4.0",
    "optree==0.15.0",
    "packaging",
    "pandas==2.2.3",
    "parso",
    "pickleshare",
    "pillow==11.2.1",
    "platformdirs",
    "prompt-toolkit",
    "protobuf==5.29.4",
    "psutil",
    "pure-eval",
    "py4j==0.10.9.7",
    "Pygments",
    "pyodbc==5.2.0",
    "pyparsing==3.2.3",
    "pyspark==3.5.5",
    "python-dateutil",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pywin32==308; sys_platform == 'win32'",
    "PyYAML==6.0.2",
    "pyzmq",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "setuptools==78.1.1",
    "six",
    "spark==0.2.1",
    "SQLAlchemy==2.0.40",
    "stack-data",
    "sympy==1.13.1",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.2",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tornado",
    "tqdm==4.67.1",
    "traitlets",
    "transformers==4.53.1",
    "typing-extensions",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth",
    "Werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "zipp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/your-project-name"
Repository = "https://github.com/yourusername/your-project-name"
Issues = "https://github.com/yourusername/your-project-name/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["your_package*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true