[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OMOP_server"
version = "0.1.0"
description = "This package initializes the tables in OMOP CDM as objects that can be called upon and used to perform the ETL process"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Siddharth Rajesh", email = "siddharth.rajesh03@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "filelock==3.18.0",
    "fsspec==2025.7.0",
    "fuzzywuzzy==0.18.0",
    "greenlet==3.2.3",
    "huggingface-hub==0.34.3",
    "idna==3.10",
    "Jinja2==3.1.4",
    "joblib==1.5.1",
    "logging==0.4.9.6",
    "MarkupSafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.0.0",
    "pyodbc==5.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "regex==2025.7.34",
    "requests==2.32.4",
    "safetensors==0.5.3",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "six==1.17.0",
    "SQLAlchemy==2.0.42",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.4",
    "torch==2.7.1+cu128",
    "torchaudio==2.7.1+cu128", 
    "torchvision==0.22.1+cu128",
    "tqdm==4.67.1",
    "transformers==4.54.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/SiddharthRajesh2003/OMOP_server"
Repository = "https://github.com/SiddharthRajesh2003/OMOP_server"
Issues = "https://github.com/SiddharthRajesh2003/OMOP_server/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["OMOP_server*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true